tests/errors/poisoning/cascade-two-undefined.fn
---
Description: Two independent undefined names report as separate errors only
Expected: FN3204, FN3204
---

type Program
{
    static fn TakesTwo(a: i32, b: i32) -> i32
    {
        return a + b
    }

    static fn Main -> i32
    {
        var x = TakesTwo(undefined_1, undefined_2)
        return 0
    }
}
